--- a/notebooks/Day1_Data_Cleaning.ipynb
+++ b/notebooks/Day1_Data_Cleaning.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "id": "cb59f2dd-ea01-4812-8ce2-99aaed93d85f",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "id": "7731e84b-fc32-4969-9b0a-513b09649a97",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "id": "4b2147f3-09d8-4130-8c30-6fbe4ee728a0",
    "metadata": {},
    "outputs": [
@@ -276,7 +276,7 @@
        "9      14310.82        4912.19                  NaN   EAST  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "id": "a3fe2b3e-8416-4cf9-af9f-93bb6995e58e",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "id": "2320299d-1528-4088-939c-b27d476d557a",
    "metadata": {},
    "outputs": [
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "id": "79233adb-b7bf-40c6-ae0c-07dbf7b3be4a",
    "metadata": {},
    "outputs": [
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "id": "a7727526-b04c-4fec-a7d8-9c3d96bc64a6",
    "metadata": {},
    "outputs": [
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "id": "4ea19bd1-e2bf-4b27-a28e-771b82969d38",
    "metadata": {},
    "outputs": [
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "id": "4e1272eb-401a-493c-a71b-229bc037bdc6",
    "metadata": {},
    "outputs": [
@@ -518,7 +518,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Missing Lead_IDs before: 0\n",
+      "Missing Lead_IDs before: 10\n",
       "Missing Lead_IDs after: 0\n",
       "Lead_ID cleaned\n"
      ]
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "id": "e7cab799-3093-4817-8dfa-34debfba07f6",
    "metadata": {},
    "outputs": [
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "id": "3f1ffc0c-4087-4de7-8e11-edfbdbf074b1",
    "metadata": {},
    "outputs": [
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "id": "cb81fe53-2d4e-44fc-9d14-dfdc89d482ad",
    "metadata": {},
    "outputs": [
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 45,
    "id": "6b5f13ba-3a04-4eb4-8908-7b466647dcd5",
    "metadata": {},
    "outputs": [
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 46,
    "id": "6b7f912e-d94d-4081-8d91-bd69fe7f75a1",
    "metadata": {},
    "outputs": [
@@ -763,7 +763,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Invalid conversion dates (before lead date): 0\n",
+      "Invalid conversion dates (same or before lead date): 17\n",
       "Conversion date logic fixed\n"
      ]
     }
@@ -777,13 +777,13 @@
     "mask_not_conv = df['Conversion_Status'] == 'Not Converted'      # Creates a boolean mask for leads not converted\n",
     "df.loc[mask_not_conv, 'Conversion_Date'] = pd.NaT      # Explicitly removes any Conversion_Date for not converted rows\n",
     "\n",
-    "# Rule 2: Conversion_Date must be same or AFTER Lead_Date\n",
+    "# Rule 2: Conversion_Date must be AFTER Lead_Date\n",
     "mask_invalid = (\n",
     "    df['Conversion_Status'] == 'Converted'\n",
     ") & (\n",
-    "    df['Conversion_Date'] < df['Lead_Date']\n",
+    "    df['Conversion_Date'] <= df['Lead_Date']\n",
     ")\n",
-    "print(f\"Invalid conversion dates (before lead date): {mask_invalid.sum()}\")\n",
+    "print(f\"Invalid conversion dates (same or before lead date): {mask_invalid.sum()}\")\n",
     "df.loc[mask_invalid, 'Conversion_Date'] = pd.NaT  # Fix invalid conversion dates(Set to NaT for now)\n",
     "\n",
     "print(\"Conversion date logic fixed\")"
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
    "id": "89758f86-7c82-40bf-b555-27ec6fbbf3a2",
    "metadata": {},
    "outputs": [
@@ -800,7 +800,7 @@
      "output_type": "stream",
      "text": [
       "Sample Revenue_Value before cleaning:\n",
-      "[0.0, 10390.1, 0.0, 0.0, 0.0, 0.0, 12684.79, 0.0, 0.0, 14310.82, 0.0, 0.0, 37767.96, 23711.59, 12544.17, 4737.84, 35350.34, 20572.64, 17481.8, 8517.36]\n",
+      "['0', '10390.1', nan, '0', nan, '0', '12684.79', '0', nan, '14310.82', '0', '0', '37767.96', '23711.59', '12544.17', '4737.84', '35350.34', '20572.64', '17481.8', '8517.36']\n",
       "\n",
       "Median revenue used for imputation: $23,915.81\n",
       "Revenue_Value nulls after cleaning: 0\n",
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "id": "4023fc94-d681-4cd5-aeba-03b1e41d7cc3",
    "metadata": {},
    "outputs": [
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "id": "d685d4f0-5a14-4324-bbe1-c67fd66e34b8",
    "metadata": {},
    "outputs": [
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 50,
    "id": "f62a4823-1d7b-4e57-8d8d-f91cf42478bb",
    "metadata": {},
    "outputs": [
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 51,
    "id": "0c3f16ed-f834-4c62-a066-7909382a3399",
    "metadata": {},
    "outputs": [
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 52,
    "id": "40ed2d30-91ed-4ce7-9791-f8d2ae2636a0",
    "metadata": {},
    "outputs": [
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 53,
    "id": "091b8b46-94fe-4ecf-abfc-9c5ce8919cc2",
    "metadata": {},
    "outputs": [
@@ -1124,10 +1124,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "d0b07b85-c2d8-495c-83bb-7eb74ffb2713",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KPIs to be Calculated:\n",
+      "\n",
+      "                            KPI                                                 Formula                                  Columns_Used Day_Calculated\n",
+      "           Lead Conversion Rate                   (Converted Leads / Total Leads) × 100                             Conversion_Status          Day 2\n",
+      "Customer Acquisition Cost (CAC)           Total Marketing Cost / No. of Converted Leads             Marketing_Cost, Conversion_Status          Day 2\n",
+      "             Revenue per Client                  Total Revenue / No. of Converted Leads              Revenue_Value, Conversion_Status          Day 2\n",
+      "            Monthly Growth Rate ((Current Month Leads - Prev Month) / Prev Month) × 100                         Lead_Date, Lead_Month          Day 2\n",
+      "           Sales Cycle Duration            Average(Conversion_Date - Lead_Date) in days                              Sales_Cycle_Days          Day 2\n",
+      "        Lead Source Performance        Conversion Rate & Revenue grouped by Lead_Source Lead_Source, Conversion_Status, Revenue_Value          Day 2\n"
+     ]
+    }
+   ],
    "source": [
     "# ─────────────────────────────────────────\n",
     "# KPI Identification (Documentation)\n",
@@ -1164,6 +1180,193 @@
     "print(\"KPIs to be Calculated:\\n\")\n",
     "print(kpi_df.to_string(index=False))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "2be14082-8861-4ea2-abb8-efd1bad32068",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cleaned dataset saved to: ../data/cleaned/BD_KPI_Cleaned_Dataset.csv\n",
+      "   Shape: (683, 13)\n",
+      "\n",
+      "Preview of saved file:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Lead_ID</th>\n",
+       "      <th>Lead_Source</th>\n",
+       "      <th>Lead_Date</th>\n",
+       "      <th>Conversion_Status</th>\n",
+       "      <th>Conversion_Date</th>\n",
+       "      <th>Revenue_Value</th>\n",
+       "      <th>Marketing_Cost</th>\n",
+       "      <th>Sales_Representative</th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Sales_Cycle_Days</th>\n",
+       "      <th>Lead_Month</th>\n",
+       "      <th>Lead_Year</th>\n",
+       "      <th>Is_Converted</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LEAD-0043</td>\n",
+       "      <td>Referral</td>\n",
+       "      <td>2024-04-02</td>\n",
+       "      <td>Not Converted</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>3036.10</td>\n",
+       "      <td>David Brown</td>\n",
+       "      <td>East</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2024-04</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>LEAD-0199</td>\n",
+       "      <td>Referral</td>\n",
+       "      <td>2024-02-07</td>\n",
+       "      <td>Converted</td>\n",
+       "      <td>2024-06-06</td>\n",
+       "      <td>10390.10</td>\n",
+       "      <td>2639.44</td>\n",
+       "      <td>Unassigned</td>\n",
+       "      <td>West</td>\n",
+       "      <td>120.00</td>\n",
+       "      <td>2024-02</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>LEAD-0526</td>\n",
+       "      <td>Email Campaign</td>\n",
+       "      <td>2023-02-11</td>\n",
+       "      <td>Not Converted</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>3021.93</td>\n",
+       "      <td>David Brown</td>\n",
+       "      <td>West</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2023-02</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>LEAD-0638</td>\n",
+       "      <td>Email Campaign</td>\n",
+       "      <td>2023-09-09</td>\n",
+       "      <td>Not Converted</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2639.44</td>\n",
+       "      <td>David Brown</td>\n",
+       "      <td>South</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2023-09</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>LEAD-0067</td>\n",
+       "      <td>Website</td>\n",
+       "      <td>2023-04-29</td>\n",
+       "      <td>Not Converted</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2095.58</td>\n",
+       "      <td>Unassigned</td>\n",
+       "      <td>East</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2023-04</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Lead_ID     Lead_Source  Lead_Date Conversion_Status Conversion_Date  \\\n",
+       "0  LEAD-0043        Referral 2024-04-02     Not Converted             NaT   \n",
+       "1  LEAD-0199        Referral 2024-02-07         Converted      2024-06-06   \n",
+       "2  LEAD-0526  Email Campaign 2023-02-11     Not Converted             NaT   \n",
+       "3  LEAD-0638  Email Campaign 2023-09-09     Not Converted             NaT   \n",
+       "4  LEAD-0067         Website 2023-04-29     Not Converted             NaT   \n",
+       "\n",
+       "   Revenue_Value  Marketing_Cost Sales_Representative Region  \\\n",
+       "0           0.00         3036.10          David Brown   East   \n",
+       "1       10390.10         2639.44           Unassigned   West   \n",
+       "2           0.00         3021.93          David Brown   West   \n",
+       "3           0.00         2639.44          David Brown  South   \n",
+       "4           0.00         2095.58           Unassigned   East   \n",
+       "\n",
+       "   Sales_Cycle_Days Lead_Month  Lead_Year  Is_Converted  \n",
+       "0               NaN    2024-04       2024             0  \n",
+       "1            120.00    2024-02       2024             1  \n",
+       "2               NaN    2023-02       2023             0  \n",
+       "3               NaN    2023-09       2023             0  \n",
+       "4               NaN    2023-04       2023             0  "
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ─────────────────────────────────────────\n",
+    "# Save Cleaned Dataset\n",
+    "# ─────────────────────────────────────────\n",
+    "\n",
+    "output_path = '../data/cleaned/BD_KPI_Cleaned_Dataset.csv'\n",
+    "df.to_csv(output_path, index=False)\n",
+    "\n",
+    "print(f\"Cleaned dataset saved to: {output_path}\")\n",
+    "print(f\"   Shape: {df.shape}\")\n",
+    "print(f\"\\nPreview of saved file:\")\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7f0647d-96e1-4e6c-8dd5-48d2b5b41871",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
